Bug overflow fixed on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
+
   /*color-scheme: light dark;*/
   /*color: rgba(255, 255, 255, 0.87);*/
   /*background-color: #242424;*/
@@ -17,6 +18,8 @@
 
 body{
   margin: 0;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 
